Fixes photo cropping for better layout.

--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -21,6 +21,7 @@
   }
 
   .photo {
+    align-self: end;
     display: none;
     justify-self: center;
     max-height: 100%;
